--- a/session7/baitap/baitap5.css
+++ b/session7/baitap/baitap5.css
@@ -4,12 +4,15 @@
     margin: 0px;
 }
 .div1{
+    padding-top: 20px;
     width: 300px;
     height: 600px;
     text-align: center;
     line-height: 40px;
     background-color: aliceblue;
     border-radius: 10px;
+    margin-top: -30px;
+    
 }   
 .div2{
     background-color: red;
@@ -38,6 +41,7 @@
     color: red;
     background-color: white;
     border: 3px solid red;
+    
 }
 .span1{
     position: relative;
