--- a/session8/baitap/baitap5.css
+++ b/session8/baitap/baitap5.css
@@ -1,11 +1,83 @@
-.back1{
-    background-color: gray;
-    height: 400px;
-    width: 600px;
-    vertical-align: middle;
+
+table {
+    border-spacing: 0;
+    width: 100%;
+    max-width: 600px;
+    margin: 50px auto;
+    text-align: center;
 }
-.back2{
-    background-color: rgb(178, 178, 178);
-    height: 250px;
-    width: 600px;
+
+
+tbody, tfoot {
+    opacity: 0.7; 
+}
+
+
+.download {
+    color: white;
+}
+
+.credits a {
+    color: #999 !important; 
+    text-decoration: underline; 
+}
+
+
+tbody {
+    background-color: rgb(146, 146, 146);
+    padding: 20px;
+}
+
+
+tfoot {
+    background-color: rgb(213, 213, 213);
+    padding: 15px;
+}
+
+
+h3 {
+    margin-bottom: 10px;
+}
+
+
+.td1 {
+    padding: 10px 20px;
+}
+
+
+.btn {
+    display: inline-flex;
+    align-items: center;
+    font-size: 16px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;   
+}
+
+
+.download {
+    background-color: blue;
+    color: white;
+}
+
+
+
+.icons {
+    font-size: 25px;
+    padding: 10px;
+}
+
+.icons i {
+    margin: 0 10px;
+    cursor: pointer;
+}
+
+.credits {
+    font-size: 14px;
+    padding: 10px;
+}
+
+.spacing {
+    height: 20px;
 }
