--- a/session8/baitap/baitap2.css
+++ b/session8/baitap/baitap2.css
@@ -37,3 +37,9 @@ button{
     height: 40px;
     border-radius: 5px;
 }
+input {
+    border-radius: 3px;
+}
+textarea {
+    border-radius: 3px;
+}
