--- a/session9/baitap/baitap8.css
+++ b/session9/baitap/baitap8.css
@@ -1,47 +1,107 @@
-.div1{
-    width: 100%;
-    height: 100%;
-}
-.div2{
-    width: 100%;
-    height: 10%;
-    background-color: rgb(40, 40, 40);
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    
-}
-.room{
-    width: 237px;
-    flex-wrap: wrap;
-    display: flex;
-    gap: 12px;
-    margin-bottom: 10px; 
-    color: white;   
-    
-}
-a{
-    text-decoration: none;  
-    
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.div3{
-    width: 100%;
-    height: 17%;
-    background-color: rgb(186, 186, 186);
-}
-.div4{
-    width: 100%;
-    height: 42%;
-}
-.div5{
-    width: 100%;
-    height: 25%;
-    background-color: rgb(186, 186, 186);
-}
-.div6{
-    width: 100%;
-    height: 6%;
-    background-color: rgb(40, 40, 40);
+div{
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+    text-align: center;
 }
 
+.div1 ul {
+    list-style: none;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
+.div1 ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.div1 ul li a {
+    color: white;
+    text-decoration: none;
+    position: relative;
+    top: 30px;
+}
+
+.div1  ul li a:hover {
+    text-decoration: none;
+}
+
+.div2 {
+    margin-top: 20px;
+    background-color: rgb(237, 237, 237);
+    color: black;
+}
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+}
+
+.div2 h3 {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.div2 p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+button a {
+    text-decoration: none;
+    background-color: #505050;
+    color: white;
+    padding: 10px 23px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+button a:hover {
+    background-color: #45a049;
+}
+
+.div3 {
+    text-align: center;
+    margin: 40px 0;
+}
+
+.div3 h2 {
+    font-size: 28px;
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+.projects {
+    display: flex;
+    justify-content: space-around;
+}
+
+.div4 {
+    background-color: #eee;
+    padding: 20px;
+    text-align: center;
+    margin-bottom: 40px;
+    color: black;
+}
+
+.div4 h3 {
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.footer {
+    background-color: #333;
+    text-align: center;
+    padding: 10px;
+}
+
+.text {
+    color: #6d6d6d;
+}
