--- a/session10/baitap/bt5.css
+++ b/session10/baitap/bt5.css
@@ -14,6 +14,7 @@ body{
 }
 p{
     margin-top: 5px;
+    padding-left: 20px;
 }
 .div1{
     display: flex;
@@ -26,7 +27,7 @@ p{
     height: 20px;
     background-color: grey;
     display: flex;
-    margin-left: 310px;
+    margin-left: 400px;
     padding-top: 15px;
     
 }
@@ -73,7 +74,7 @@ p{
 hr{
     background-color: white;
     width: 660px;
-    margin-left: 310px;
+    margin-left: 420px;
 }
 .end{
     width: 100%;
